--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Todo App</title>
     </head>
-    <body>
+    <body style="background-color: rgb(231, 221, 196); border: 10px solid black;">
         <h1 style="font-size: 70px;text-align: center;">Todo App</h1>
         <div style="text-align: center;">
-            <input style="background-color: rgb(184, 175, 172);color: black;width: 300px;height: 50px;font-size: 40px;" placeholder="Enter items.." id="todoInput" type="text">
-            <button style="background-color: rgb(184, 175, 172);color: black;width: 300px;height: 50px;font-size: 40px;" onclick="addTodo()">Add items</button>
-            <button style="background-color: rgb(184, 175, 172);color: black;width: 300px;height: 50px;font-size: 40px;" onclick="deleteAllItems()">Delete All items</button>
+            <input style="background-color: rgb(185, 147, 134);color: rgb(41, 43, 44);width: 300px;height: 50px;font-size: 40px;border-radius: 10px;" placeholder="Enter items.." id="todoInput" type="text">
+            <button style="background-color: rgb(184, 175, 172);color: black;width: 300px;height: 50px;font-size: 40px;border-radius: 10px;" onclick="addTodo()">Add items</button>
+            <button style="background-color: rgb(184, 175, 172);color: black;width: 300px;height: 50px;font-size: 40px;border-radius: 10px;" onclick="deleteAllItems()">Delete All items</button>
 
         </div>
         <ul id="list"></ul>
